--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            text=""/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <Chronometer
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <CheckedTextView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp"
+        android:text="tioio" />
+
+    <EditText
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp"
+        android:text="tioio" />
+
+    <ExpandableListView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp"
+        android:text="tioio" />
+
+    <ImageSwitcher
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <ToggleButton
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <ProgressBar
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <SeekBar
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <StackView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <RatingBar
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <RadioGroup
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <RadioButton
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <TextSwitcher
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <android.support.v7.widget.SearchView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <Switch
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:padding="16dp" />
 </LinearLayout>
