--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         tools:context="com.example.android.themeapp2.MainActivity">
 
         <fragment
+            android:id="@+id/main_fragment"
             android:name="com.example.android.themeapp2.MainFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,11 +24,13 @@
             android:orientation="horizontal">
 
             <fragment
+                android:id="@+id/fragment_a"
                 android:name="com.example.android.themeapp2.FragmentA"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <fragment
+                android:id="@+id/fragment_b"
                 android:name="com.example.android.moduleb.FragmentB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
