--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
 
         <!--Custom App attributes-->
         <item name="customViewStyle">@style/Widget.Material.CustomView</item>
+        <item name="customViewBStyle">@style/Widget.Material.CustomView</item>
 
     </style>
 
