--- a/app/src/main/res/values/themes_pink.xml
+++ b/app/src/main/res/values/themes_pink.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/material_pink700</item>
         <item name="colorPrimaryDark">@color/material_pink900</item>
         <item name="colorAccent">@color/material_pink400</item>
+
+        <item name="colorControlHighlight">?attr/colorAccent</item>
     </style>
 
 </resources>
