--- a/app/src/main/res/values/themes_yellow.xml
+++ b/app/src/main/res/values/themes_yellow.xml
@@ -6,5 +6,6 @@
         <item name="colorPrimary">@color/material_yellow700</item>
         <item name="colorPrimaryDark">@color/material_yellow900</item>
         <item name="colorAccent">@color/material_yellow400</item>
+        <item name="colorControlHighlight">?attr/colorAccent</item>
     </style>
 </resources>
